[package]
name = "Facebook-conversion-API-Proxy"
version = "0.1.0"
edition = "2018"

include = ["sql/"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures="0.3"
serde = "1"
serde_json = "1" 
actix-service = "2.0"
actix-web = {version = "4.0.0-beta.12"}
actix-web-httpauth = "0.5.1"
rand = "0.8"
dotenv = "0.15.0"
env_logger = "0.9"
log = "0.4"
sqlx = {version = "0.5", features = ["runtime-actix-rustls", "sqlite", "macros", "migrate", "json"]}