[package]
name = "FacebookConversionAPIProxy"
version = "0.1.0"
edition = "2018"

include = ["sql/"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = "1" 
rand = "0.8"
dotenv = "0.15.0"
sqlx = {version = "0.5", features = ["runtime-actix-rustls", "sqlite", "macros", "migrate", "json"]}
rocket = "0.5.0-rc.1"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = []